--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,5 +44,5 @@ jobs:
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "Update glass.json and Collection.json with new files"
-          file_pattern: glass.json Collection.json    
+          commit_message: "Update Collection.json with new files"
+          file_pattern: Collection.json    
